[project]
name = "edge-agent-workflow-scheduling"
dynamic = ["version"]
description = "RL-based edge workflow scheduling framework for multi-agent LLM systems."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Edge Agent Workflow Scheduling Contributors" }
]
dependencies = [
  "pillow>=11.0.0,<13.0.0"
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0"
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
fallback_version = "0.0.0"

[tool.hatch.build.targets.wheel]
packages = ["src/edge_agent_workflow_scheduling"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
